<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">

    <android.support.v7.widget.CardView
            android:id="@+id/procjectsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="15dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" app:cardPreventCornerOverlap="true"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

            <Spinner
                    android:id="@+id/projectSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </Spinner>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/timerCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="15dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" app:cardPreventCornerOverlap="true"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/procjectsCardView">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    android:id="@+id/txtStartTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_title"/>

            <TextView
                    android:id="@+id/txtTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_default"
                    android:layout_below="@+id/txtStartTimer"
                    android:visibility="invisible"/>

            <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtStartTimer"/>

            <Button
                    android:onClick="timerPause"
                    android:text="@string/timer_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtTimer"
                    android:id="@+id/btnPauseTimer"/>

            <Button
                    android:onClick="timerContinue"
                    android:text="@string/timer_continue"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtTimer"
                    android:id="@+id/btnContinueTimer"/>

            <Button
                    android:onClick="timerStart"
                    android:text="@string/timer_start"
                    android:layout_width="wrap_content"
                    android:layout_toEndOf="@id/btnContinueTimer"
                    android:layout_below="@+id/txtTimer"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnStartTimer"/>

            <Button
                    android:onClick="timerStop"
                    android:text="@string/timer_stop"
                    android:layout_width="wrap_content"
                    android:layout_toEndOf="@id/btnContinueTimer"
                    android:layout_below="@+id/txtTimer"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:id="@+id/btnStopTimer"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>